--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.21",
     "@auth0/angular-jwt": "^5.2.0",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/preferences": "^6.0.2",
+    "@capacitor/status-bar": "^6.0.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
